[package]
name = "knn"
version = "0.2.7"
authors = ["gjf2a <ferrer@hendrix.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
supervised_learning = {git = "https://github.com/gjf2a/supervised_learning"}
kmeans = {git = "https://github.com/gjf2a/kmeans"}
hash_histogram = "0.7"
trait-set = "0.3.0"